--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav li {
 /* styling banner */
 .banner {
   display: flex;
-  margin-left: 230px;
+  margin-left: auto;
   background: white;
   background-image: url(portfolio-resources-main/images/header_bg.png),
     url(portfolio-resources-main/images/developer.png);
@@ -70,50 +70,69 @@ nav li {
   border: 1px solid #fd6e0a;
   border-radius: 5px;
 }
-.banner img {
-  width: 584px;
-  height: 676px;
+#banner-image {
+  max-width: 30%;
+  height: 30%;
 }
-.about-me {
-  width: 1140px;
-  height: auto;
-  margin: 130px auto 0 auto;
+.about {
+  margin: 130px 230px;
   background: #fff8f3;
   border-radius: 10px;
   padding: 130px 150px;
-  text-align: center;
 }
 .section-title {
   font-size: 35px;
   font-weight: 700;
   color: #181818;
-  align-items: center;
-  margin-top: 131px;
+  margin-top: 130px;
   margin-bottom: 30px;
-  /* text-align: center; */
+  text-align: center;
 }
 .section-description {
-  width: 827px;
-  height: 120px;
-  /* text-align: center; */
   margin-bottom: 30px;
+  text-align: center;
 }
 .about-info-container {
   display: flex;
   justify-content: space-around;
 }
 .about-info {
-  /* margin-left: 50px; */
+  font-size: 20px;
+  line-height: 30px;
 }
 .info-type {
   color: #757575;
-  font-size: 20px;
-  line-height: 30px;
+  font-weight: 400;
 }
 .info-description {
   color: #474747;
+  font-weight: 700;
+}
+.skills {
+  margin: 130px 230px;
+  padding: 130px 150px;
+}
+.skill-card-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.card {
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
+}
+.card img {
+  margin-top: 30px;
+}
+.card-title {
+  color: #181818;
   font-size: 20px;
   font-weight: 700;
-  line-height: 30px;
-  padding-bottom: 130px;
+  margin-top: 30px;
+}
+.card-description {
+  color: #757575;
+  font-size: 16px;
+  line-height: 28px;
 }
